<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.regminer</groupId>
    <artifactId>regs4j</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>
        <dependency>
            <groupId>org.dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>2.1.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-model</artifactId>
            <version>3.8.1</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.28</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jdt</groupId>
            <artifactId>org.eclipse.jdt.core</artifactId>
            <version>3.20.0</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->

        <dependency>
            <groupId>org.eclipse.jgit</groupId>
            <artifactId>org.eclipse.jgit</artifactId>
            <version>5.9.0.202009080501-r</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>1.7.36</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.5.0</version>
        </dependency>

    </dependencies>
</project>

        <!--<?xml version="1.0" encoding="UTF-8"?>-->
        <!--<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">-->
        <!--    <modelVersion>4.0.0</modelVersion>-->

        <!--    <groupId>com.regminer</groupId>-->
        <!--    <artifactId>regs4j</artifactId>-->
        <!--    <version>1.0-SNAPSHOT</version>-->
        <!--    <build>-->
        <!--        <plugins>-->
        <!--            <plugin>-->
        <!--                <groupId>org.apache.maven.plugins</groupId>-->
        <!--                <artifactId>maven-compiler-plugin</artifactId>-->
        <!--                <configuration>-->
        <!--                    <source>11</source>-->
        <!--                    <target>11</target>-->
        <!--                </configuration>-->
        <!--            </plugin>-->
        <!--&lt;!&ndash;            <plugin>&ndash;&gt;-->
        <!--&lt;!&ndash;                <groupId>org.apache.maven.plugins</groupId>&ndash;&gt;-->
        <!--&lt;!&ndash;                <artifactId>maven-jar-plugin</artifactId>&ndash;&gt;-->
        <!--&lt;!&ndash;                <version>2.4</version>&ndash;&gt;-->
        <!--&lt;!&ndash;                <configuration>&ndash;&gt;-->
        <!--&lt;!&ndash;                    <archive>&ndash;&gt;-->
        <!--&lt;!&ndash;                        <manfest>&ndash;&gt;-->
        <!--&lt;!&ndash;                            <addClasspath>true</addClasspath>&ndash;&gt;-->
        <!--&lt;!&ndash;                            <classpath>./src</classpath>&ndash;&gt;-->
        <!--&lt;!&ndash;                            <mainClass>example.CLI</mainClass>&ndash;&gt;-->
        <!--&lt;!&ndash;                        </manfest>&ndash;&gt;-->
        <!--&lt;!&ndash;                    </archive>&ndash;&gt;-->
        <!--&lt;!&ndash;                </configuration>&ndash;&gt;-->
        <!--&lt;!&ndash;            </plugin>&ndash;&gt;-->
        <!--        </plugins>-->
        <!--    </build>-->

        <!--    <properties>-->
        <!--        <maven.compiler.source>11</maven.compiler.source>-->
        <!--        <maven.compiler.target>11</maven.compiler.target>-->
        <!--    </properties>-->
        <!--    <dependencies>-->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.commons</groupId>-->
        <!--            <artifactId>commons-lang3</artifactId>-->
        <!--            <version>3.12.0</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.commons</groupId>-->
        <!--            <artifactId>commons-collections4</artifactId>-->
        <!--            <version>4.4</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.dom4j</groupId>-->
        <!--            <artifactId>dom4j</artifactId>-->
        <!--            <version>2.1.4</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.maven</groupId>-->
        <!--            <artifactId>maven-model</artifactId>-->
        <!--            <version>3.9.0</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>mysql</groupId>-->
        <!--            <artifactId>mysql-connector-java</artifactId>-->
        <!--            <version>8.0.32</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.eclipse.jdt</groupId>-->
        <!--            <artifactId>org.eclipse.jdt.core</artifactId>-->
        <!--            <version>3.33.0</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>commons-io</groupId>-->
        <!--            <artifactId>commons-io</artifactId>-->
        <!--            <version>2.11.0</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>junit</groupId>-->
        <!--            <artifactId>junit</artifactId>-->
        <!--            <version>4.13.2</version>-->
        <!--        </dependency>-->

        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.commons/commons-text &ndash;&gt;-->

        <!--        <dependency>-->
        <!--            <groupId>org.eclipse.jgit</groupId>-->
        <!--            <artifactId>org.eclipse.jgit</artifactId>-->
        <!--            <version>6.5.0.202303070854-r</version>-->
        <!--        </dependency>-->
        <!--        -->
        <!--        <dependency>-->
        <!--	       <groupId>org.slf4j</groupId>-->
        <!--		    <artifactId>slf4j-nop</artifactId>-->
        <!--		    <version>2.0.5</version>-->
        <!--		</dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>commons-cli</groupId>-->
        <!--            <artifactId>commons-cli</artifactId>-->
        <!--            <version>1.5.0</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.commons</groupId>-->
        <!--            <artifactId>commons-lang3</artifactId>-->
        <!--            <version>3.12.0</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.commons</groupId>-->
        <!--            <artifactId>commons-lang3</artifactId>-->
        <!--            <version>3.12.0</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.commons</groupId>-->
        <!--            <artifactId>commons-lang3</artifactId>-->
        <!--            <version>3.6</version>-->
        <!--        </dependency>-->

        <!--    </dependencies>-->
        <!--</project>-->